--- a/Advanced-Python-BuiltInFunctions-Notes-Rangers114.ipynb
+++ b/Advanced-Python-BuiltInFunctions-Notes-Rangers114.ipynb
@@ -1062,24 +1062,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (2563523545.py, line 3)",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'add'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\arist\\AppData\\Local\\Temp\\ipykernel_17212\\2563523545.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    places = lambda noun1, noun2, noun3, noun4, noun5: f\"{noun1}, 'Argentina', {noun2}, 'San Diego', {noun3}, {noun4}, {noun5},\u001b[0m\n\u001b[1;37m                                                                                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_19684\\1571581939.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplaces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Argentina\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"San Diego\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"  \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Boston\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"New York\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mplaces\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Los Angeles\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Seattle\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Toronto\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Denver\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Santa Fe\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplaces\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'add'"
      ]
     }
    ],
    "source": [
     "places = [\" \",\"Argentina\", \" \", \"San Diego\",\"\",\"  \",\"\",\"Boston\",\"New York\"]\n",
     "\n",
-    "places = lambda noun1, noun2, noun3, noun4, noun5: f\"{noun1}, 'Argentina', {noun2}, 'San Diego', {noun3}, {noun4}, {noun5},\n",
-    "'Boston', 'New York'\"\n",
-    "print(places('Los Angeles', 'Ontario', 'Portland', 'Seattle', 'Toronto'))\n",
+    "places.add(\"Los Angeles\", \"Seattle\", \"Toronto\", \"Denver\", \"Santa Fe\")\n",
+    "print(add(places))\n",
     "\n",
     "\n"
    ]
